# purpose

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  CMakeLists.txt  KDEExperimentalPurposeConfig.cmake  KDEExperimentalPurposeConfig.cmake.in  KF5PurposeConfig.cmake.in  KF6PurposeConfig.cmake.in  README.md  extraJsonTranslationPaths.txt  metainfo.yaml  purpose.categories
autotests/: CMakeLists.txt  alternativesmodeltest.cpp  alternativesmodeltest.h  menutest.cpp  menutest.h
building-dir/: .git-blame-ignore-revs
docs/: Doxyfile.local
po/ar/: libpurpose6_quick.po  libpurpose6_widgets.po  libpurpose_quick.po  libpurpose_widgets.po  purpose-fileitemaction.po  purpose6_barcode.po  purpose6_bluetooth.po  purpose6_fileitemaction.po  purpose6_imgur.po  purpose6_kdeconnect.po  purpose6_kdeconnectsms.po  purpose6_nextcloud.po  purpose6_pastebin.po  purpose6_phabricator.po  purpose6_reviewboard.po  purpose6_saveas.po  purpose6_youtube.po  purpose_barcode.po  purpose_email.po  (+12 more)
src/: CMakeLists.txt  Messages.sh  alternativesmodel.cpp  alternativesmodel.h  cmake-paths.h.cmake  configuration.cpp  configuration.h  constrainthelpers.cpp  constrainthelpers.h  exportinterface.cpp  exportinterface.h  helper.cpp  helper.h  job.cpp  job.h  jobcontroller.cpp  jobcontroller.h  jsonobject.h  pluginbase.cpp  pluginbase.h  purpose-index.qdoc  purpose.qdoc  purpose.qdocconf  standard-plugin-types.qrc
src/accounts/: CMakeLists.txt  accountsmodel.cpp  accountsmodel.h
src/externalprocess/: processjob.cpp  processjob.h  purposeprocess_main.cpp
src/fileitemactionplugin/: CMakeLists.txt  Messages.sh  sharefileitemaction.cpp  sharefileitemaction.h  sharefileitemaction.json
src/kcm/: CMakeLists.txt  Messages.sh  kcm_purpose.json  kcm_purpose.json.license  kcmpurpose.cpp  kcmpurpose.h  pluginmodel.cpp  pluginmodel.h
src/kcm/ui/: main.qml
src/plugins/: CMakeLists.txt  ExportPluginType.desktop  ExportPluginType.json  ShareUrlPluginType.json  twitter-microblog.service.in
src/plugins/barcode/: CMakeLists.txt  Messages.sh  barcodeplugin.cpp  barcodeplugin.json  barcodeplugin_config.qml
src/plugins/bluetooth/: CMakeLists.txt  Messages.sh  bluetoothplugin.cpp  bluetoothplugin.json  bluetoothplugin_config.qml
src/plugins/clipboard/: CMakeLists.txt  Messages.sh  clipboardplugin.cpp  clipboardplugin.json
src/plugins/cmake/: FindQMLModule.cmake  FindQMLModule.cmake.in  QMLModules.cmake
src/plugins/dropbox/: CMakeLists.txt  Messages.sh  dropboxjob.cpp  dropboxjob.h  dropboxplugin.cpp  dropboxplugin.json  dropboxplugin_config.qml
src/plugins/dummy/: dummyplugin.cpp  dummyplugin.desktop
src/plugins/email/: CMakeLists.txt  Messages.sh  emailplugin.cpp  emailplugin.json
src/plugins/imgur/: CMakeLists.txt  Messages.sh  imgurplugin.cpp  imgurplugin.desktop  imgurplugin.json  mpform.cpp  mpform.h
src/plugins/kdeconnect/: CMakeLists.txt  Messages.sh  devicesmodel.cpp  devicesmodel.h  kdeconnectplugin.cpp  kdeconnectplugin.desktop  kdeconnectplugin.json  kdeconnectplugin_config.qml  org.kde.kdeconnect.daemon.xml  org.kde.kdeconnect.device.xml
src/plugins/kdeconnect_sms/: CMakeLists.txt  Messages.sh  kdeconnectsmsplugin.cpp  kdeconnectsmsplugin.json
src/plugins/ktp-sendfile/: CMakeLists.txt  Messages.sh  ktpsendfileplugin.cpp  ktpsendfileplugin.desktop  ktpsendfileplugin.json
src/plugins/nextcloud/: CMakeLists.txt  Messages.sh  accountsmodel.cpp  accountsmodel.h  nextcloud-upload.service.in  nextcloudjob.cpp  nextcloudjob.h  nextcloudplugin.cpp  nextcloudplugin.json  nextcloudplugin_config.qml
src/plugins/pastebin/: CMakeLists.txt  Messages.sh  pastebinplugin.cpp  pastebinplugin.desktop  pastebinplugin.json
src/plugins/phabricator/: CMakeLists.txt  Messages.sh  debug.cpp  debug.h  notes.txt  phabricatorjobs.cpp  phabricatorjobs.h  phabricatorplugin.cpp  phabricatorplugin.json  phabricatorplugin_config.qml
src/plugins/phabricator/icons/: CMakeLists.txt
src/plugins/phabricator/quick/: difflistmodel.cpp  difflistmodel.h  phabricatorquickplugin.cpp  phabricatorquickplugin.h  phabricatorrc.cpp  phabricatorrc.h  qmldir
src/plugins/phabricator/tests/: testphabricator.cpp
src/plugins/reviewboard/: CMakeLists.txt  Messages.sh  reviewboardjobs.cpp  reviewboardjobs.h  reviewboardplugin.cpp  reviewboardplugin.json  reviewboardplugin_config.qml
src/plugins/reviewboard/icons/: CMakeLists.txt
src/plugins/reviewboard/quick/: rbrepositoriesmodel.cpp  rbrepositoriesmodel.h  rbreviewslistmodel.cpp  rbreviewslistmodel.h  reviewboardquickplugin.cpp  reviewboardquickplugin.h  reviewboardrc.cpp  reviewboardrc.h
src/plugins/saveas/: CMakeLists.txt  Messages.sh  saveasplugin.cpp  saveasplugin.desktop  saveasplugin.json  saveasplugin_config.qml
src/plugins/telegram/: CMakeLists.txt  Messages.sh  telegramplugin.cpp  telegramplugin.json
src/plugins/twitter/: CMakeLists.txt  Messages.sh  metadata.json  twitterplugin.cpp  twitterplugin.json
src/plugins/twitter/contents/code/: main.js  main.js.in  package.json  test.js
src/plugins/twitter/contents/config/: config.qml
src/plugins/youtube/: CMakeLists.txt  Messages.sh  google-youtube.service.in  kipiplugin_youtube.cpp  kipiplugin_youtube.h  youtubejob.cpp  youtubejob.h  youtubejobcomposite.cpp  youtubejobcomposite.h  youtubeplugin.cpp  youtubeplugin.desktop  youtubeplugin.json  youtubeplugin_config.qml
src/plugins/youtube/cmake/: FindQMLModule.cmake
src/plugins/youtube/icons/: CMakeLists.txt  sc-actions-kipiplugin_youtube.svgz
src/quick/: AlternativesView.qml  CMakeLists.txt  JobView.qml  Messages.sh  PurposeWizard.qml  RunningJob.qml  ShareAction.qml  ShareDialog.qml  ShareMenu.qml  plugins.qmltypes  purposeqml.qdoc  purposeqml.qdocconf  purposequickplugin.cpp  purposequickplugin.h  qmldir  qmlfiles.qrc  types.h
src/tool/: main.cpp  main.qml
src/widgets/: CMakeLists.txt  JobDialog.qml  Messages.sh  menu.cpp  menu.h  purposewidgets-resources.qrc  purposewidgets.qdoc  purposewidgets.qdocconf
src/widgets/compatheaders/: Menu  menu.h
tests/: CMakeLists.txt  menudemo.cpp
tests/apiexample/: ApiExample.qml  CMakeLists.txt  qmlapiexample.cpp
(+1443 files in other folders)
